// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base 1`] = `
.c0 {
  margin: 8px;
  width: 100%;
  background-color: #ffffff;
  color: #000000;
}

@media (max-width:600px) {
  .c0 {
    margin: 0;
  }
}

<div
  className="c0"
  width={true}
/>
`;

exports[`mixin fallbacks 1`] = `
.c0 {
  background-color: blue;
  color: #0000FF;
}

@media (max-width:600px) {
  .c0 {
    background-color: black;
  }
}

<div
  className="c0"
/>
`;
